--- a/src/components/Skill/Development/index.scss
+++ b/src/components/Skill/Development/index.scss
@@ -7,5 +7,10 @@
 		display: block;
 		padding: 0.5rem 0;
 		width: calc(50% - 0.5rem);
+
+		@media print {
+			font-size: 0.9rem;
+			line-height: 0.9rem;
+		}
 	}
 }
